force-app/main/default/objects/NS_Partner__c/NS_Partner__c.object-meta.xml
<CustomObject>
    <description>Custom object to display Partner Related List in Opportunities Object.</description>
    <label>Partner</label>
    <nameField>
        <displayFormat>PTNR-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>