force-app/main/default/objects/NS_Partner__c/fields/NS_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field gets populated from the selected Partner Account in the related opportunity.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Opportunities</relationshipLabel>
    <relationshipName>Partners3</relationshipName>
    <type>Lookup</type>
</CustomField>