force-app/main/default/objects/NS_Partner__c/fields/NS_Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NS_Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This looks up to the related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>NS_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>