force-app/main/default/objects/NS_Partner__c/fields/NSSales_Number_of_Partner_Record__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Number_of_Partner_Record__c</fullName>
    <label>Number of Partner Record</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>